Bug 454864 - Tab Browser theme broken with dark scheme
Summary: Tab Browser theme broken with dark scheme
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 22.04.1
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
: 454092 456051 456933 457260 457882 458558 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-06-05 07:15 UTC by saif1988
Modified: 2022-08-31 15:56 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
broken-tabs-bug (75.34 KB, image/png)
2022-06-05 07:15 UTC, saif1988
Details

Note You need to log in before you can comment on or make changes to this bug.
Description saif1988 2022-06-05 07:15:19 UTC
Created attachment 149474 [details]
broken-tabs-bug

SUMMARY
Using Kate here everyday on Windows. The last update 22.04.x broke the UI for me. I am using Breeze Dark color s cheme and the tab browser is full white unreadable.

SOFTWARE/OS VERSIONS
Windows: 11

ADDITIONAL INFORMATION
https://imgur.com/a/Q08UrvT
Comment 1 Dominik Haumann 2022-06-09 08:33:54 UTC
Confirmed.
Comment 2 Waqar Ahmed 2022-06-09 08:38:11 UTC
Maybe recreating the style on paletteChange would fix this, 

Unfortunately don't have a windows machine to fix this issue :(
Comment 3 Christoph Cullmann 2022-06-12 12:44:25 UTC
Yeah, recreating the style might really fix that.

If we try that out in master, could you test this for us?
Comment 4 Christoph Cullmann 2022-06-12 12:48:38 UTC
Git commit 3014fe6af4c0cc8ba24ba937ab001b6fbe3652e7 by Christoph Cullmann.
Committed on 12/06/2022 at 12:48.
Pushed by cullmann into branch 'master'.

re-instantiate style on palette changed

M  +16   -0    apps/lib/katetabbar.cpp

https://invent.kde.org/utilities/kate/commit/3014fe6af4c0cc8ba24ba937ab001b6fbe3652e7
Comment 5 Christoph Cullmann 2022-06-16 14:55:02 UTC
*** Bug 454092 has been marked as a duplicate of this bug. ***
Comment 6 Jan Bidler 2022-06-21 16:27:50 UTC
I tried commit c28e8175ff2575d6235780de0965745154118655 from the binary factory.
A single "Tab" looks fine now, but multiple tabs are still broken.
(And not sure if related to this patch, but if there's only one tab, I cannot double click to create other tabs, I have to go through file -> new)
Comment 7 Bug Janitor Service 2022-06-26 17:31:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/774
Comment 8 Christoph Cullmann 2022-06-27 14:34:22 UTC
Git commit babf0b7084b509b140621faf627b58393bd89b2c by Christoph Cullmann.
Committed on 27/06/2022 at 13:58.
Pushed by cullmann into branch 'master'.

remove proxy style of avoid Windows issues

let's try if without the proxy style
the coloring is OK

the only thing we loose is the italics

M  +0    -65   apps/lib/katetabbar.cpp

https://invent.kde.org/utilities/kate/commit/babf0b7084b509b140621faf627b58393bd89b2c
Comment 9 Christoph Cullmann 2022-06-27 15:29:48 UTC
(In reply to Miepee from comment #6)
> I tried commit c28e8175ff2575d6235780de0965745154118655 from the binary
> factory.
> A single "Tab" looks fine now, but multiple tabs are still broken.
> (And not sure if related to this patch, but if there's only one tab, I
> cannot double click to create other tabs, I have to go through file -> new)

Hi, merged a new change, could you try out the next nightmake master compiles in the next days?
Comment 10 Jan Bidler 2022-06-27 16:39:42 UTC
I will, after binary factory will push out a new build. Currently its last build does not include that MR.

A bit unrelated and too late now I assume, but I did have some questions regarding the MR in the Kate IRC/matrix room. Maybe I missed some other place where Kate discussions take place, but would be neat if those would be a bit more active :p
Comment 11 Christoph Cullmann 2022-06-27 16:51:32 UTC
Sorry, missed that.

I don't think ATM the invent.kde.org CI works in that way to provide you the artifacts, I would assume this will be the case once one replaces binary-factory fully with it.

But I might be wrong.
Comment 12 Waqar Ahmed 2022-06-28 05:55:14 UTC
*** Bug 456051 has been marked as a duplicate of this bug. ***
Comment 13 Waqar Ahmed 2022-06-28 06:00:44 UTC
> A bit unrelated and too late now I assume, but I did have some questions regarding the MR in the Kate IRC/matrix room. Maybe I missed some other place where Kate discussions take place, but would be neat if those would be a bit more active :p

Hi. It's not that its inactive, its that Telegram<->Matrix bridge is broken atm, so a lot of messages never get seen by some of the devs. Some of us are on Telegram, others on Matrix. If you use Telegram already, you can join the kateeditor group there.
Comment 14 Jan Bidler 2022-06-28 08:41:54 UTC
Tested out the new MR, seems to work fine. It looks correct in both Breeze Light and Breeze Dark (I don't have any other Themes to test) and it properly shows on a changed-file-not-saved-to-disk tab via asterisk.
Comment 15 Waqar Ahmed 2022-07-20 03:20:57 UTC
*** Bug 456933 has been marked as a duplicate of this bug. ***
Comment 16 Waqar Ahmed 2022-07-29 07:21:46 UTC
*** Bug 457260 has been marked as a duplicate of this bug. ***
Comment 17 Waqar Ahmed 2022-08-15 15:11:41 UTC
*** Bug 457882 has been marked as a duplicate of this bug. ***
Comment 18 Waqar Ahmed 2022-08-31 15:56:02 UTC
*** Bug 458558 has been marked as a duplicate of this bug. ***