remove proxy style of avoid Windows issues

let's try if without the proxy style
the coloring is OK

the only thing we loose is the italics

BUG: 454864